# metameric_dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/core/: spectrum.h
include/metameric/app/: application.hpp
include/metameric/components/: schedule.hpp
include/metameric/core/: array.hpp  atlas.hpp  bvh.hpp  components.hpp  constraints.hpp  convex.hpp  cuda.hpp  data.hpp  data_.hpp  define.h  distribution.hpp  exception.h  fwd.h  fwd.hpp  gl_window.h  image.hpp  io.hpp  json.hpp  knn.hpp  linprog.hpp  linprog.hpp.bak  managed.h  matching.hpp  math.h  math.hpp  mesh.hpp  metamer.hpp  moments.hpp  nlopt.hpp  ocs.hpp  opengl.h  packing.hpp  pca.hpp  project.hpp  ranges.hpp  ray.hpp  record.hpp  scene.hpp  scene_components.hpp  scene_handler.hpp  (+15 more)
include/metameric/editor/: schedule.hpp  task_measure_tool.hpp  task_mmv_editor.hpp  task_render_export.hpp  task_scene_viewport.hpp  task_settings_editor.hpp  task_window.hpp
include/metameric/gl/: buffer.h  draw.h  enum.h  enums.h  framebuffer.h  program.h  sampler.h  sync.h  texture.h  utility.h  vertexarray.h  window.h
include/metameric/gui/: application.hpp  spectral_grid.hpp  texture_view.hpp
include/metameric/render/: bvh.hpp  path.hpp  path_primitives.hpp  primitives_query.hpp  primitives_render.hpp  query_primitives.hpp  ray_primitives.hpp  render_primitives.hpp  renderer.hpp  scene_data.hpp  sensor.hpp  surface.hpp  texture_atlas.hpp
include/metameric/scene/: constraints.hpp  emitter.hpp  object.hpp  resources.hpp  scene.hpp  settings.hpp  uplifting.hpp  view.hpp
resources/: FindAVX.cmake  conf.h
resources/cmake/: dependency.cmake  metameric_conf.cmake  resource.cmake  spirv.cmake
resources/cmake/stb_include/: stb_include_app.cpp
resources/data/: basis_262144.txt  cornell_box.data  cornell_box.json  imgui.ini
resources/misc/: basis.txt  basis_262144.txt  basis_262144.txt.bak  basis_262144.txt.prev  basis_262144_ev.txt  basis_avg.spd  imgui.ini  tree.json
resources/mitsuba3/: README.md  metameric.cpp  metameric_delaunay.cpp  metameric_generalized.cpp
resources/shaders/: triangle copy.frag  triangle copy.vert  triangle.frag  triangle.vert
resources/shaders/include/: bary.glsl  bary_cluster.glsl  brdf.glsl  bvh.glsl  cmfs.glsl  cmfs_cluster.glsl  cmfs_invoc.glsl  cmfs_subgroup.glsl  color.glsl  complex.glsl  constants_spectrum.glsl  constants_subgroup.glsl  distribution.glsl  emitter.glsl  gbuffer.glsl  guard.glsl  intersect.glsl  mapping.glsl  mapping_cluster.glsl  mapping_invoc.glsl  mapping_subgroup.glsl  math.glsl  mesh.glsl  moments.glsl  noise.glsl  path.glsl  pcg.glsl  preamble.glsl  random.glsl  random_normal.glsl  random_uniform.glsl  ray.glsl  record.glsl  sampler.glsl  scene.glsl  spectrum.glsl  spectrum_cluster.glsl  spectrum_invoc.glsl  spectrum_layout.glsl  spectrum_subgroup.glsl  (+6 more)
resources/shaders/spectrum/: spectrum.glsl
resources/shaders/viewport_task/: gamut_draw.frag  texture_draw.frag  texture_draw.vert
scenes/: README.md  bunny.json  cornell_box.json  fold.data  mug.json  paper_colorchecker.data  paper_colorchecker.json  paper_indirect_color_constraining.data  paper_indirect_color_constraining.json  paper_patches.data  paper_patches.json
scenes/bunny/: bunny.data
scenes/cornell_box/: cornell_box.data
scenes/fold/: fold.json
scenes/portal/: portal.json
src/: main.cpp  main_benchmark.cpp  main_glsl_parser.cpp  main_imgui.cpp  main_playground.cpp  main_tbb_cu.cu  main_vk.cpp  metameric.cpp
src/app/: application.cpp  ffw_video.cpp  metameric.cpp  metameric_editor.cpp  mismatch_testing.cpp  mismatch_testing.cpp.bak  moment_testing.cpp  noise_testing.cpp  ocs_testing.cpp  ocs_testing.cpp.bak  presentation_videos.cpp  reflected_ocs_testing.cpp  reflected_ocs_testing.cpp.bak
src/app/include/: animation.hpp  application.hpp  video.hpp
src/components/: schedule.cpp
src/components/dev/: gen_random_color_mappings.cpp  gen_random_constraints.cpp  random_mapping_viewer.cpp  task_gen_random_constraints.cpp  task_gen_random_constraints.cpp.bak  task_gen_random_mappings.cpp  task_gen_random_mappings.cpp.bak  task_random_mapping_viewer.cpp  task_random_mapping_viewer.cpp.bak
src/components/misc/: task_project_state.cpp  task_scene_handler.cpp  task_state.cpp
src/components/pipeline/: mapping_cpu_task.cpp  task_gen_ocs.cpp  (+31 more)
src/core/: atlas.cpp  bvh.cpp  components.cpp  constraints.cpp  convex.cpp  cuda.cu  data.cpp  data_.cpp  distribution.cpp  image.cpp  image_convert.cpp  image_dynamic.cpp  io.cpp  json.cpp  knn.cpp  linprog.cpp  math.cpp  mesh.cpp  mesh_chull.cpp  mesh_cleanup.cpp  mesh_halfedge.cpp  mesh_halfedge.cpp.bak  mesh_omesh.cpp  metamer.cpp  moments.cpp  nlopt.cpp  opengl.cpp  pca.cpp  project.cpp  ray.cpp  record.cpp  scene.cpp  scene_components.cpp  scene_handler.cpp  scheduler.cpp  serialization.cpp  solver.cpp  spectral_grid.cpp  spectrum.cpp  state.cpp  (+4 more)
src/editor/: schedule.cpp  task_mmv_editor.cpp  task_render_export.cpp  task_scene_viewport.cpp  task_window.cpp
src/gl/: buffer.cpp  draw.cpp  framebuffer.cpp  program.cpp  sampler.cpp  sync.cpp  texture.cpp  utility.cpp  vertexarray.cpp  window.cpp
src/gui/: application.cpp  spectral_grid.cpp
src/render/: bvh.cpp  primitives_query.cpp  primitives_render.cpp  query_primitives.cpp  ray_primitives.cpp  render_primitives.cpp  renderer.cpp  scene_data.cpp  sensor.cpp  texture_atlas.cpp
src/scene/: constraints.cpp  emitter.cpp  object.cpp  resources.cpp  scene.cpp  uplifting.cpp
tests/: distribution.cpp  distribution.cpp.bak  moments.cpp  moments_shader.cpp  moments_shader.cpp.bak  permutations.cpp  permutations.cpp.bak  scratchpad.cpp  scratchpad.cpp.bak  scratchpad_2.cpp  scratchpad_binomial.cpp.bak  stack_traversal.cpp  svd_roundtrip.cpp  svd_roundtrip.cpp.bak
tests/paper/: aaaaargh.cpp.bak  full_image_generation.cpp.bak  hyperspectral_generation.cpp.bak  hyperspectral_generation_spectrum.cpp.bak  ocs_generation.cpp  ocs_generation.cpp.bak  rgb_image_generation.cpp.bak  rgb_image_generation_spectrum.cpp.bak  single_spectrum_generation.cpp
(+688 files in other folders)
